--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.11.0",
     "path": "https://esm.sh/path@^0.12.7",
     "vite": "https://esm.sh/vite@^7.0.6",
-    "url": "https://esm.sh/url@^0.11.4"
+    "url": "https://esm.sh/url@^0.11.4",
+    "puppeteer": "https://esm.sh/puppeteer@^24.15.0"
   }
 }
 </script>
